# sql-connector

./: .gitignore  Cargo.toml  Cross.toml  DEVELOPER.md  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-json-sql.yaml  publish.yaml  publish_dev.yaml
actions/: k3d-check.sh
crates/fluvio-model-sql/: Cargo.toml
crates/fluvio-model-sql/src/: lib.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/configs/: test_postgres_all_data_types.yaml  test_postgres_consumer_offsets.yaml  test_postgres_with_json_sql_transformations.yaml
crates/integration-tests/src/: main.rs
crates/json-sql/: Cargo.toml  README.md  SmartModule.toml
crates/json-sql/src/: lib.rs  mapping.rs  transform.rs
crates/sql-sink/: Cargo.toml  Connector.toml  config-example.yaml
crates/sql-sink/hub/: package-meta.yaml
crates/sql-sink/src/: backoff.rs  bind.rs  config.rs  db.rs  insert.rs  main.rs  sink.rs  upsert.rs
tests/integration/: Cargo.toml
tests/integration/configs/: test_fail_db_conn.yaml  test_reliable_db_conn.yaml
tests/integration/src/: all_data_types.rs  consumer_offsets.rs  fail_db_conn.rs  json_sql_transformations.rs  main.rs  reliable_db_conn.rs
tests/integration/src/utils/: cdk.rs  ctx.rs  db.rs  docker_conn.rs  fluvio_conn.rs  mod.rs  smdk.rs
