[workspace]
members = [
    "crates/sql-sink",
    "crates/fluvio-model-sql",
    "crates/integration-tests",
    "crates/json-sql",
]
resolver = "2"

[profile.release-lto]
inherits = "release"
lto = true

[workspace.dependencies]
fluvio = { git = "https://github.com/infinyon/fluvio", branch = "fix_shutdown_cdk" }
fluvio-connector-common = { git = "https://github.com/infinyon/fluvio", branch = "fix_shutdown_cdk" }
fluvio-future = "0.7.0"
fluvio-smartmodule = { git = "https://github.com/infinyon/fluvio", branch = "fix_shutdown_cdk" }
