[workspace]
members = [
    "crates/sql-sink",
    "crates/fluvio-model-sql",
    "crates/json-sql",
    "tests/integration",
]
resolver = "2"

[profile.release-lto]
inherits = "release"
lto = true

[workspace.dependencies]
fluvio = { git = "https://github.com/infinyon/fluvio", branch = "fix_shutdown_cdk" }
fluvio-connector-common = { git = "https://github.com/infinyon/fluvio", branch = "fix_shutdown_cdk" }
fluvio-future = "0.7.0"
fluvio-smartmodule = { git = "https://github.com/infinyon/fluvio", branch = "fix_shutdown_cdk" }


# fluvio = { path = "../../fluvio/crates/fluvio/" }
# fluvio-connector-common = { path = "../../fluvio/crates/fluvio-connector-common/" }
# fluvio-smartmodule = { path = "../../fluvio/crates/fluvio-smartmodule/" }

# Internal dependencies
fluvio-model-sql = { path = "crates/fluvio-model-sql" }
