[package]
name = "integration-tests"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Integration tests for Fluvio SQL sink connector"

[dependencies]
log = { version = "0.4", default-features = false }
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }
anyhow = { version = "1.0", default-features = false }
bollard = { version = "0.15", default-features = false }
async-std = { version = "1.12", default-features = false, features = ["attributes", "tokio1"] }
futures-util = { version = "0.3", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_yaml = { version = "0.9", default-features = false }
fluvio-future = { version = "0.6", default-features = false, features = ["retry"] }
serde_json = { version = "1.0", default-features = false }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-async-std-rustls", "decimal", "chrono", "uuid"] }
rust_decimal = { version = "1.32" }
chrono = { version = "0.4" }
uuid = { version = "1.3", features = ["v4"] }

fluvio-model-sql = { path = "../fluvio-model-sql"}
fluvio = { workspace = true}
