[package]
name = "json-sql"
version = "0.0.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "JSON to SQL transformation SmartModule"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ['cdylib', 'rlib']

[dependencies]
fluvio-model-sql = { workspace = true }
fluvio-smartmodule = { workspace = true }

eyre = { workspace = true, default-features = false }
once_cell = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, default-features = false, features = ["std"] }
