[package]
name = "sql-sink"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "A Fluvio connector that sends records to SQL database"

[dependencies]
async-trait = { version = "0.1", default-features = false}
futures = { version = "0.3", default-features = false }
anyhow = { version = "1.0" }
async-std = { version = "1.8",  default-features = false, features = ["attributes"]}
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json = { version = "1", default-features = false }
url = { version = "2.4", default-features = false, features = ["serde"] }
itertools = "0.11"
sqlx = { version = "0.6", features = [ "runtime-async-std-rustls" , "postgres", "sqlite", "any", "decimal", "chrono", "uuid" ], default-features = false }
rust_decimal = { version = "1.31", default-features = false }
chrono = { version = "0.4", default-features = false }
uuid = { version = "1.3", default-features = false }

fluvio-model-sql = { path = "../fluvio-model-sql" }
fluvio = { workspace = true}
fluvio-connector-common = { workspace = true, features = ["derive"]}
