[package]
name = "sql-sink"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "A Fluvio connector that sends records to SQL database"

[dependencies]
anyhow = { version = "1.0" }
async-std = { version = "1.13",  default-features = false, features = ["attributes"]}
async-trait = { version = "0.1", default-features = false}
chrono = { version = "0.4", default-features = false }
futures = { version = "0.3", default-features = false }
itertools = "0.13"
rust_decimal = { version = "1.36", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json = { version = "1", default-features = false }
sqlx = { version = "0.6", features = [ "runtime-async-std-rustls" , "postgres", "sqlite", "any", "decimal", "chrono", "uuid" ], default-features = false }
url = { version = "2.5", default-features = false, features = ["serde"] }
uuid = { version = "1.11", default-features = false }

fluvio-model-sql = { path = "../fluvio-model-sql" }
fluvio = { workspace = true }
fluvio-connector-common = { workspace = true, features = ["derive"]}
humantime = "2.1.0"
