[package]
name = "sql-sink"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "A Fluvio connector that sends records to SQL database"

[dependencies]
adaptive_backoff = { workspace = true }
anyhow = { workspace = true }
async-std = { workspace = true, default-features = false, features = ["attributes"] }
async-trait = { workspace = true, default-features = false }
chrono = { workspace = true, features = ["serde"], default-features = false }
futures = { workspace = true, default-features = false }
humantime = { workspace = true }
humantime-serde = { version = "1.1", default-features = false  }
itertools = { workspace = true }
rust_decimal = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, default-features = false }
sqlx = { workspace = true, features = ["runtime-async-std-rustls", "postgres", "sqlite", "json", "any", "rust_decimal", "chrono", "uuid"] }
url = { workspace = true, default-features = false, features = ["serde"] }
uuid = { workspace = true, default-features = false }


fluvio-model-sql = { workspace = true }
fluvio = { workspace = true }
fluvio-connector-common = { workspace = true, features = ["derive"]}
