[package]
name = "integration-tests"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache 2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Integration tests for Fluvio SQL sink connector"

[dependencies]
anyhow = { workspace = true, default-features = false }
async-std = { workspace = true, default-features = false, features = ["attributes", "tokio1"] }
bollard = { workspace = true, default-features = false, features = ["pipe", "http"] }
chrono = { workspace = true }
futures-util = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
once_cell = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, default-features = false }
serde_yaml = { workspace = true, default-features = false }
sqlx = { workspace = true, features = ["runtime-async-std-rustls", "postgres", "sqlite", "json", "any", "rust_decimal", "chrono", "uuid"] }
uuid = { workspace = true, features = ["v4"] }
env_logger = { workspace = true, default-features = false, features = ["auto-color", "humantime"] }

fluvio = { workspace = true }
fluvio-future = { workspace = true }
fluvio-model-sql = { workspace = true }
